# remotescreen

./: .gitignore  CMakeLists.txt  README.md  images.qrc
src/: byteutils.cpp  byteutils.h  common.h  main.cpp
src/signal/: appsignal.cpp  appsignal.h
src/widget/: outputwidget.cpp  outputwidget.h  remotescreenwidget.cpp  remotescreenwidget.h
src/window/: remotescreenwindow.cpp  remotescreenwindow.h
